bulk updates years 2020-2022

--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
                                 <h1>Pierdomenico Fiadino</h1>
                                 <div class="type-wrap">
                                     <div id="typed-strings">
+                                        <span>Data Manager</span>
                                         <span>Computer Engineer</span>
                                         <span>Researcher</span>
-                                        <span>Data Scientist</span>
                                     </div>
                                     <span id="typed" style="white-space:pre;"></span>
                                 </div>
-                                <a download="fiadino_cv.pdf" class="download-link hvr-shutter-out-horizontal" onclick="Materialize.toast('Resume Download Successfully', 4000, 'rounded')" data-position="left" data-delay="50" href="fiadino_cv.pdf"> Download My CV <i class="fa fa-download"></i></a>
+                                <a download="resume.pdf" class="download-link hvr-shutter-out-horizontal" onclick="Materialize.toast('Resume Download Successfully', 4000, 'rounded')" data-position="left" data-delay="50" href="resume.pdf"> Download My CV <i class="fa fa-download"></i></a>
                             </div>
                             <a class="scroll-down page-scroll" title="Scroll Down" href="#about"><i class="fa fa-circle" aria-hidden="true"></i></a>
                         </div>
@@ -113,8 +113,8 @@
                             <div class="row">
                                 <div class="col-sm-3 profile-pic">
                                     <a class="profile-img" href="index.html"><img src="assets/images/pf.jpg" alt="image"></a>
-                                    <h3 class="info-position">Senior Data Scientist</h3>
-                                    <a download="fiadino_cv.pdf" class="download-link hvr-shutter-out-horizontal" onclick="Materialize.toast('Resume Download Successfully', 4000, 'rounded')" data-position="left" data-delay="50" href="fiadino_cv.pdf">Download My CV <i class="fa fa-download"></i></a>
+                                    <h3 class="info-position">Senior Data Professional</h3>
+                                    <a download="resume.pdf" class="download-link hvr-shutter-out-horizontal" onclick="Materialize.toast('Resume Download Successfully', 4000, 'rounded')" data-position="left" data-delay="50" href="resume.pdf">Download My CV <i class="fa fa-download"></i></a>
                                 </div>
                                 <div class="col-sm-9">
                                     <div class="about-info row">
@@ -156,17 +156,17 @@
                                             <div class="info-icon hvr-trim"> <i class="fa fa-envelope" aria-hidden="true"></i></div>
                                             <div class="info-text">
                                                 <span>Work email</span>
-                                                pierdomenico.fiadino@typeform.com
+                                                piero.fiadino@bitpanda.com
                                             </div>
                                         </div>
 
-                                        <div class="col-sm-6 info-block wow fadeInRight">
+                                        <!-- <div class="col-sm-6 info-block wow fadeInRight">
                                             <div class="info-icon hvr-trim"><i class="fa fa-map-marker" aria-hidden="true"></i> </div>
                                             <div class="info-text">
                                                 <span>Work address</span>
                                                 Typeform, c/ Bac de Roda 163, 08018 Barcelona
                                             </div>
-                                        </div>
+                                        </div> -->
 
                                         <div class="col-sm-6 info-block wow fadeInRight">
                                             <div class="info-icon hvr-trim"> <i class="fa fa-flag" aria-hidden="true"></i></div>
@@ -179,7 +179,7 @@
                                         <div class="col-sm-12 social-profiles">
                                             <span>Links </span>
                                             <!--<a class="hvr-pulse-grow facebook" href="#" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>-->
-                                            <a class="hvr-pulse-grow twitter" href="http://twitter.com/p_fiadino" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                            <!--<a class="hvr-pulse-grow twitter" href="http://twitter.com/p_fiadino" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>-->
                                             <a class="hvr-pulse-grow linkedin" href="https://www.linkedin.com/in/fiadino/" title="Linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                                             <!--<a class="hvr-pulse-grow behance" href="#" title="Behance"><i class="fa fa-behance" aria-hidden="true"></i></a>-->
                                             <!--<a class="hvr-pulse-grow pinterest" href="#" title="Pinterest"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>-->
@@ -193,22 +193,19 @@
 
                                         <div class="col-sm-12 about-content">
                                             <p>
-                                            I am an experienced Data Scientist with Computer Engineering background. 
-                                            Currently, I work as <b>Technical Lead in the Data team of 
-                                            <a href="http://typeform.com">Typeform</a></b>, 
-                                            focusing on product and customer analytics in the SaaS field. 
-                                            Before, I have worked at <a href="http://zeelo.co">Zeelo</a>, 
-                                            a start-up in the transportation market, where I led the data activities 
-                                            end-to-end, including development of  smart data products, advanced analytics 
-                                            and BI.
+                                                Data professional with a wealth of experience in impactful data-driven projects and 
+                                                with proven track record in building and leading successful data and analytics teams.
                                             </p>
-
                                             <p>
-                                            My PhD studies at the Technical University of Vienna (TUWien) and the years spent 
-                                            in R&D centres helped me complementing my hands-on profile with a 
-                                            theoretical and research attitude. 
-                                            During my PhD, I have authored more than 30 scientific publications 
-                                            in major international conferences and journals.
+                                                Currently, I manage the Product Analytics unit at Bitpanda, a leading European fintech 
+                                                specialised in cryptocurrencies and tokenised assets. 
+                                                In the course of my career, I have worked in several fields (crypto, SaaS, telecommunications 
+                                                and others) bridging technology and business impact.
+                                            </p>
+                                            <p>
+                                                The years spent in R&D centres and my PhD studies in Data Mining and Machine Learning at TU Wien 
+                                                completed my hands-on profile with a theoretical and research attitude. 
+                                                During my PhD, I have co-authored 30+ publications in international conferences and journals.
                                             </p>
 
                                         </div>
@@ -268,7 +265,7 @@
                                         <div class="progress-bar wow fadeInLeft" data-progress="100%" style="width: 100%;" data-wow-duration="1.5s" data-wow-delay="1.2s"><span></span> </div>
                                     </div>
                                     <div class="progress">
-                                        <div class="lead"><i class="fa fa-clock-o" aria-hidden="true"></i> Project Management </div>
+                                        <div class="lead"><i class="fa fa-clock-o" aria-hidden="true"></i> People Management </div>
                                         <div class="progress-bar wow fadeInLeft" data-progress="100%" style="width: 100%;" data-wow-duration="1.5s" data-wow-delay="1.2s"><span></span> </div>
                                     </div>
 
@@ -318,12 +315,34 @@
 
                                     <div class="timeline-block wow fadeInLeft">
                                         <div class="timeline-img" data-anim-effect="zoomIn">
+                                            <i>2022</i>
+                                        </div>
+
+                                        <div class="timeline-content" data-anim-effect="fadeInLeft">
+                                            <h2>Bitpanda</h2>
+                                            <p>Data Analytics Manager (Jan 2022 - ...)</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="timeline-block wow fadeInRight">
+                                        <div class="timeline-img" data-anim-effect="zoomIn">
+                                            <i>2021</i>
+                                        </div>
+
+                                        <div class="timeline-content" data-anim-effect="fadeInRight">
+                                            <h2>Typeform</h2>
+                                            <p>Data Science Manager (Jan 201 - Jan 2022)</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="timeline-block wow fadeInLeft">
+                                        <div class="timeline-img" data-anim-effect="zoomIn">
                                             <i>2019</i>
                                         </div>
 
                                         <div class="timeline-content" data-anim-effect="fadeInLeft">
                                             <h2>Typeform</h2>
-                                            <p>Data Science Technical Lead (since Nov 2019)</p>
+                                            <p>Data Science Technical Lead (Nov 2019 - Dec 2020)</p>
                                         </div>
                                     </div>
 
@@ -707,10 +726,10 @@
                             <div class="row">
                                 <!--<div class="col-lg-6 col-md-6 col-sm-12">
                                   <h2>Contact Address</h2>-->
-                                  <div class="contact-block wow fadeInLeft">
+                                  <!--<div class="contact-block wow fadeInLeft">
                                       <i class="fa fa-map-marker" aria-hidden="true"></i>
                                       <p><b>Work address: </b> Typeform, c/ Bac de Roda 163, 08018 Barcelona </p>
-                                  </div>
+                                  </div>-->
                                   <!--<div class="contact-block wow fadeInLeft">
                                       <i class="fa fa-phone" aria-hidden="true"></i>
                                       <p><b>Work phone: </b> +34 932 381 400 (1364)   </p>
@@ -729,7 +748,7 @@
                                   </div>
                                   <div class="contact-block wow fadeInLeft">
                                       <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                                      <p><b>Work email: </b> <a href="mailto:pierdomenico.fiadino@typeform.com">pierdomenico.fiadino@typeform.com</a></p>
+                                      <p><b>Work email: </b> <a href="mailto:piero.fiadino@bitpanda.com">piero.fiadino@bitpanda.com</a></p>
                                   </div>
                                   <div class="contact-block wow fadeInLeft">
                                       <i class="fa fa-home" aria-hidden="true"></i>
@@ -750,7 +769,7 @@
                                         <div class="social-profiles">-->
                                             <!--<a class="hvr-pulse-grow facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>-->
                                             <!--<a class="hvr-pulse-grow twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>-->
-                                            <!--<a class="hvr-pulse-grow linkedin" href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                            <!--<a class="hvr-pulse-grow linkedin" href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>-->
                                             <!--<a class="hvr-pulse-grow behance" href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>-->
                                             <!--<a class="hvr-pulse-grow pinterest" href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>-->
                                             <!--<a class="hvr-pulse-grow vimeo" href="#"><i class="fa fa-vimeo" aria-hidden="true"></i></a>-->
