temporarily removed current position section

--- a/content/jobs.html
+++ b/content/jobs.html
@@ -9,12 +9,13 @@ layout: simple
 
 <h2>Current position (since January 2023)</h2>
 
-<h3>Head of Data @ Messagebird.com</h3>
+<!-- <h3>Head of Data @ Messagebird.com</h3>
 <img alt="" src="https://www.messagebird.com/img/logo.svg" style="float:left; height:30px; margin:8px 10px; " />
 <p><b>Area</b>: <tt> SaaS | CPaaS | telecommunications</tt></p>
 <p><b>Company</b>: MessageBird's mission is to create a world where communicating with a business is as easy as talking with a friend. 
 It powers communication between businesses and their customers — across any channel, always with the right context, 
-and on every corner of the planet.</p>
+and on every corner of the planet.</p> -->
+Updates coming soon... <i class="fas fa-bullhorn fa-lg"></i> <br/>
 
 <hr>
 
