fixed button links

--- a/content/about.html
+++ b/content/about.html
@@ -23,17 +23,29 @@ layout: simple
 
 <div style="text-align:center">
     &nbsp;&nbsp;
-    <button onclick="location.href='/resume.pdf'">
-        <i class="fas fa-file-pdf fa-lg"></i>&nbsp;Download my CV
-    </button>
+    <a href="/resume.pdf">
+        <button>
+            <i class="fas fa-file-pdf fa-lg"></i>&nbsp;Download my CV
+        </button>
+    </a>
     &nbsp;&nbsp;
-    <button onclick="location.href='https://linkedin.com/in/fiadino'">
-        <i class="fab fa-linkedin fa-lg"></i>&nbsp;Connect on LinkedIn
-    </button>
+    <a href="https://linkedin.com/in/fiadino">
+        <button>
+            <i class="fab fa-linkedin fa-lg"></i>&nbsp;Connect on LinkedIn
+        </button>
+    </a>
+    &nbsp;&nbsp;<br/>
+    <a href="mailto:p@fiadino.org">
+        <button>
+            <i class="fas fa-envelope fa-lg"></i>&nbsp;Write me an email
+     </button>
+        </a>
     &nbsp;&nbsp;
-    <button onclick="location.href='mailto:p@fiadino.org'">
-        <i class="fas fa-envelope fa-lg"></i>&nbsp;Write me an email
-    </button>
+    <a href="https://hachyderm.io/@herr_dr">
+        <button>
+            <i class="fab fa-mastodon fa-lg"></i>&nbsp;Connect on Mastodon
+        </button>
+    </a>
 </div>
 
 <hr>
