update company logo urls

--- a/content/jobs.html
+++ b/content/jobs.html
@@ -35,7 +35,7 @@ cryptocurrency exchange, commodities and securities trading, and ETFs.</p>
 <br />
 
 <h3>Data Science and Analytics Manager @ Typeform.com (Jan 2021 - Dec 2021)</h3>
-<img alt="" src="https://cdn.worldvectorlogo.com/logos/typeform.svg" style="float:left; height:30px; margin:8px 10px; " />
+<img alt="" src="https://upload.wikimedia.org/wikipedia/commons/0/0a/Typeform_logo-01.svg" style="float:left; height:30px; margin:8px 10px; " />
 <p><b>Area</b>: <tt> SaaS | marketing</tt></p>
 <p><b>Company</b>: Typeform is a Spanish online software as a service company that specializes in online form building and online surveys. 
 Its main software creates dynamic forms based on user needs.
@@ -48,7 +48,7 @@ Liaise with product stakeholders in setting measurable goals aligned with compan
 <br />
 
 <h3>Data Science Tech Lead @ Typeform.com (Nov 2019 - Dec 2020)</h3>
-<img alt="" src="https://cdn.worldvectorlogo.com/logos/typeform.svg" style="float:left; height:30px; margin:8px 10px; " />
+<img alt="" src="https://upload.wikimedia.org/wikipedia/commons/0/0a/Typeform_logo-01.svg" style="float:left; height:30px; margin:8px 10px; " />
 <p><b>Area</b>: <tt> SaaS | marketing</tt></p>
 <p><b>My role</b>: Technical leadership across charters of data scientists; facilitating cross-functional collaboration among data
 scientists, data engineers and ML-specialists; definition/propagation of quality standards, best practises, tools,
