aesthetic changes (margins)

--- a/content/education.html
+++ b/content/education.html
@@ -7,14 +7,14 @@ layout: simple
 
 <hr>
 
-<h2>PhD / Doctorate Degree (2015)</h2>
-<div style="width: 100%; display: flex; justify-content: left;">
-    <div style="width: 140px; float: left;">
-        <img alt="" src="https://www.mosaiqc.eu/uploads/1/2/0/6/120640577/tu-signet_3.png" style="float:left; height:100px; margin:30px 10px; " />
+<h2>PhD / Doctorate Degree (completed: 2015)</h2>
+<div style="width: 100%; display: flex; justify-content: left; margin:-35px 0px 0px 0px;">
+    <div style="width: 120px; height: 120px; float: left;">
+        <img alt="" src="https://www.mosaiqc.eu/uploads/1/2/0/6/120640577/tu-signet_3.png" style="float:left; width:90%; margin:30px 10px 10px 1px; " />
     </div>
     <div style="margin-left: 0px; float: right;">
         <p>
-            <b>University</b>: Vienna University of Technology (TU Wien)<br/>
+            <b>University</b>: <a href="https://www.tuwien.at">Vienna University of Technology (TU Wien)</a><br/>
             <b>Field of study</b>: Electrical Engineering and Information Technology<br/>
             <b>Dissertation</b>: Data Analytics in computer networks and design of ML systems for anomaly detection and diagnosis<br/>
             <b>Supervisors</b>: Dr Pedro Casas, Prof Tanja Zseby
@@ -22,14 +22,14 @@ layout: simple
     </div>
 </div>
 
-<h2>MSc / Master of Science (2010)</h2>
-<div style="width: 100%; display: flex; justify-content: left;">
-    <div style="width: 140px; float: left;">
-        <img alt="" src="https://upload.wikimedia.org/wikipedia/en/4/45/Sapienza_University_of_Rome.png" style="float:left; height:100px; margin:30px 25px; " />
+<h2>MSc / Master of Science (completed: 2010)</h2>
+<div style="width: 100%; display: flex; justify-content: left; margin:-35px 0px 0px 0px;">
+    <div style="width: 120px; height: 120px; float: left;">
+        <img alt="" src="https://www.pikpng.com/pngl/b/597-5977915_sapienza-university-of-rome-logo-clipart.png" style="float:left; width:90%; margin:30px 10px 10px 1px; " />
     </div>
     <div style="margin-left: 0px; float: right;">
         <p>
-            <b>University</b>: Sapienza University of Rome<br/>
+            <b>University</b>: <a href="https://www.uniroma1.it">Sapienza University of Rome</a><br/>
             <b>Field of study</b>: Computer Engineering<br/>
             <b>Dissertation</b>: Extract of mobility patterns from mobile network using Data Mining techniques<br/>
             <b>Supervisors</b>: Dr Danilo Valerio, Dr Fabio Ricciato, Prof Francesca Cuomo
@@ -37,16 +37,18 @@ layout: simple
     </div>
 </div>
 
-<h2>BSc / Bachelor of Science (2008)</h2>
-<div style="width: 100%; display: flex; justify-content: left;">
-    <div style="width: 140px; float: left;">
-        <img alt="" src="https://upload.wikimedia.org/wikipedia/en/4/45/Sapienza_University_of_Rome.png" style="float:left; height:100px; margin:30px 25px; " />
+<h2>BSc / Bachelor of Science (completed: 2008)</h2>
+<div style="width: 100%; display: flex; justify-content: left; margin:-35px 0px 0px 0px;">
+    <div style="width: 120px; height: 120px; float: left;">
+        <img alt="" src="https://www.pikpng.com/pngl/b/597-5977915_sapienza-university-of-rome-logo-clipart.png" style="float:left; width:90%; margin:30px 10px 10px 1px; " />
     </div>
     <div style="margin-left: 0px; float: right;">
         <p>
-            <b>University</b>: Sapienza University of Rome<br/>
+            <b>University</b>: <a href="https://www.uniroma1.it">Sapienza University of Rome</a><br/>
             <b>Field of study</b>: Computer Engineering<br/>
             <b>Dissertation</b>: Design and implementation of a Java application for p2p file sharing<br/>
         </p>
     </div>
 </div>
+
+<hr>
