minor rephrasing about-me section

--- a/content/about.html
+++ b/content/about.html
@@ -10,22 +10,22 @@ layout: simple_custom
 <div style="height:400px">
 <p style="text-align:justify; text-justify: inter-word;">
     <img alt="" src="/img/pf.jpg" style="float:left; height:150px; margin:8px 10px; " />
-    Data professional with a wealth of experience in impactful data-driven projects and 
-    with proven track record in building and leading successful data and analytics teams.
+    Data professional with a wealth of experience in impactful data-driven projects
+    and with proven track record in leading successful data and analytics teams.
 </p>
 
 <p style="text-align:justify; text-justify: inter-word;">
-    Currently, I manage the Data team at MessageBird, a leading multichannel CPaaS company. 
-    In the course of my career, I have worked in several application fields 
-    — SaaS, FinTech, intelligent transport systems, IoT, smart cities, geographical analytics, 
-    human mobility, computer network monitoring — 
-    filling the gap between technology and business impact.
+    Currently, I manage the Data department at MessageBird, a leading
+    multichannel CPaaS and Marketing Automation platform. In the course of my
+    career, I have worked in several data intensive application fields, with particular
+    focus on data analytics and decision data science in the SaaS market.
 </p>
 
 <p style="text-align:justify; text-justify: inter-word;">
-    The years spent in R&amp;D centres and my PhD studies in Data Mining and Machine Learning at 
-    TU Wien completed my hands-on profile with a theoretical and research attitude. 
-    During my PhD, I have co-authored 30+ publications in international conferences and journals.
+    The time spent in R&amp;D centres and my PhD studies in Data Mining and Machine Learning at 
+    TU Wien completed my hands-on and pragmatic profile with a theoretical and research attitude. 
+    During my PhD, I have authored more than 30 research publications in major international 
+    conferences and journals.
 </p>
 <div>
 
