added role description of mb

--- a/content/jobs.html
+++ b/content/jobs.html
@@ -15,12 +15,17 @@ layout: simple_custom
 <p><b>Company</b>: MessageBird's mission is to create a world where communicating with a business is as easy as talking with a friend. 
 It powers communication between businesses and their customers — across any channel, always with the right context, 
 and on every corner of the planet.</p>
+<p><b>My role</b>:  Manage a cross-functional team composed of Data Engineers, Analytics Engineers, Data Scientists, 
+Data Analysts / Leading data initiatives company-wide: implementation of software instrumentation and tracking, data ingestion
+pipelines, data modeling and DWH architectures, metrics definition, institutional reporting and data science / 
+Data reporting for C-Suite: organized Weekly Business Reviews (WBR) for Product and Go-To-Market departments.
+</p>
 
 <hr>
 
 <h2>Previous roles (2010 - 2022)</h2>
 
-<h3>Data Analytics Manager (Product) @ <a href="https://bitpanda.com">Bitpanda.com</a> (Jan 2022 - Jan 2023)</h3>
+<h3>Data Analytics Manager (Product) @ <a href="https://bitpanda.com">Bitpanda.com</a> (Jan 2022 - Dec 2022)</h3>
 <img alt="" src="https://cdn.bitpanda.com/media/New%20navigation_Rebrand%203.0/Bitpanda_EN_trimmed.png" style="float:left; height:30px; margin:8px 10px; " />
 <p><b>Area</b>: <tt> crypto | fintech</tt></p>
 <p><b>Company</b>: Bitpanda GmbH is an Austrian company headquartered in Vienna. 
@@ -28,7 +33,7 @@ Bitpanda's mobile app provides access to its trading platform, which provides a
 cryptocurrency exchange, commodities and securities trading, and ETFs.</p>
 <p><b>My role</b>: Kick-off data analytics function from scratch, from hiring to definition of Product Analyst role 
 / Rollout of first company’s A/B tests, with impact throughout the whole customer funnel 
-/ Definition of Product’s metrics framework, customer segmentation, characterisation of ideal customer profile
+/ Definition of Product’s metrics framework, customer segmentation, characterisation of ideal customer profile.
 </p>
 
 <br />
