updated exp to DP

--- a/content/jobs.html
+++ b/content/jobs.html
@@ -7,11 +7,30 @@ layout: simple_custom
 
 <hr>
 
-<h2>Current position (since January 2023)</h2>
+<h2>Current position (since March 2024)</h2>
+
+<h3>Global VP of Data @ <a href="https://docplanner.com">Docplanner.com</a></h3>
+<img alt="" src="https://www.docplanner.com/img/logo-default-group-en.svg" style="float:left; height:30px; margin:8px 10px; " />
+<p><b>Area</b>: <tt> SaaS | HealthTech | B2B and B2C </tt></p>
+<p><b>Company</b>: Docplanner is the world's largest HealthTech platform, providing patients with marketplaces
+    to find the perfect doctor and health professionals with solutions to manage their practise.</p>
+<p><b>My role</b>:  
+    Lead the Global Data function at Docplanner Group, composed of Data Platform, BI, and Product
+    Analytics. Directly manage a department ~40 professionals across multiple teams and influence
+    company's “data community” of 250+ data experts. / 
+    Oversee the Global Data Infrastructure, serving internal data consumers and external customers. /
+    Drive Data Governance initiatives, impacting data modelling, taxonomies, and the definition of KPIs across the Group's product portfolio and local/global operations. /
+    Deliver data assets (institutional dashboards, critical pipelines, curated datasets) and Decision Science solutions (predictive models) for Top Management. /
+    Spearhead major ongoing initiatives: (i) revamp software instrumentation and event tracking governance (tools: Amplitude, Avo, GA4); (ii) harmonise CRMs across local operations (tools: Salesforce, Tableau, Superset); (iii) optimise Data Warehouse architecture and data modelling to support Data Gov. (tools: DBT, Airflow).
+</p>
+
+<hr>
+
+<h2>Previous roles (2010 - 2023)</h2>
 
 <h3>Head of Data @ <a href="https://messagebird.com">MessageBird.com</a></h3>
 <img alt="" src="https://www.messagebird.com/img/logo.svg" style="float:left; height:30px; margin:8px 10px; " />
-<p><b>Area</b>: <tt> SaaS | CPaaS | telecommunications</tt></p>
+<p><b>Area</b>: <tt> SaaS | CPaaS | telecommunications | B2B</tt></p>
 <p><b>Company</b>: MessageBird's mission is to create a world where communicating with a business is as easy as talking with a friend. 
 It powers communication between businesses and their customers — across any channel, always with the right context, 
 and on every corner of the planet.</p>
@@ -21,13 +40,9 @@ pipelines, data modeling and DWH architectures, metrics definition, institutiona
 Data reporting for C-Suite: organized Weekly Business Reviews (WBR) for Product and Go-To-Market departments.
 </p>
 
-<hr>
-
-<h2>Previous roles (2010 - 2022)</h2>
-
 <h3>Data Analytics Manager (Product) @ <a href="https://bitpanda.com">Bitpanda.com</a> (Jan 2022 - Dec 2022)</h3>
 <img alt="" src="https://cdn.bitpanda.com/media/New%20navigation_Rebrand%203.0/Bitpanda_EN_trimmed.png" style="float:left; height:30px; margin:8px 10px; " />
-<p><b>Area</b>: <tt> crypto | fintech</tt></p>
+<p><b>Area</b>: <tt> crypto | fintech | B2C</tt></p>
 <p><b>Company</b>: Bitpanda GmbH is an Austrian company headquartered in Vienna. 
 Bitpanda's mobile app provides access to its trading platform, which provides a 
 cryptocurrency exchange, commodities and securities trading, and ETFs.</p>
@@ -40,7 +55,7 @@ cryptocurrency exchange, commodities and securities trading, and ETFs.</p>
 
 <h3>Data Science and Analytics Manager @ <a href="https://typeform.com">Typeform.com</a> (Jan 2021 - Dec 2021)</h3>
 <img alt="" src="https://upload.wikimedia.org/wikipedia/commons/0/0a/Typeform_logo-01.svg" style="float:left; height:30px; margin:8px 10px; " />
-<p><b>Area</b>: <tt> SaaS | marketing</tt></p>
+<p><b>Area</b>: <tt> SaaS | marketing | B2B</tt></p>
 <p><b>Company</b>: Typeform is a Spanish online software as a service company that specializes in online form building and online surveys. 
 Its main software creates dynamic forms based on user needs.
 Typeform's software has been used by Apple Inc., Airbnb, Uber and Nike, Inc. 
@@ -53,7 +68,7 @@ Liaise with product stakeholders in setting measurable goals aligned with compan
 
 <h3>Data Science Tech Lead @ <a href="https://typeform.com">Typeform.com</a> (Nov 2019 - Dec 2020)</h3>
 <img alt="" src="https://upload.wikimedia.org/wikipedia/commons/0/0a/Typeform_logo-01.svg" style="float:left; height:30px; margin:8px 10px; " />
-<p><b>Area</b>: <tt> SaaS | marketing</tt></p>
+<p><b>Area</b>: <tt> SaaS | marketing | B2B</tt></p>
 <p><b>My role</b>: Technical leadership across charters of data scientists; facilitating cross-functional collaboration among data
 scientists, data engineers and ML-specialists; definition/propagation of quality standards, best practises, tools,
 methodologies; technical reviews; coordination of development of internal analytics tools and libraries / 
@@ -61,7 +76,7 @@ Hands-on work in strategic and multi-disciplinary projects aimed at informing up
 
 <h3>Data Lead @ <a href="https://zeelo.co">Zeelo.co</a> (Feb 2018 - Oct 2019)</h3>
 <img alt="" src="https://assets.website-files.com/6266aac81321b47a195b9dd0/6266b2b92b3f1ac779eedf16_Main.svg" style="float:left; height:30px; margin:8px 10px; " />
-<p><b>Area</b>: <tt> SaaS | transportation</tt></p>
+<p><b>Area</b>: <tt> SaaS | transportation | B2B and B2C</tt></p>
 <p><b>Company</b>: Zeelo is the smart bus platform for organizations, providing flexible turn-key and plug-in transportation programs for commuting and school runs.
 It uses data to identify, build and improve fixed bus routes and shuttles to maximise ridership.</p>
 <p><b>My role</b>: Establishing and leading rollout of company-wide data activities end to end (platforms, analytics, machine learning) / 
