update bird logo

--- a/content/jobs.html
+++ b/content/jobs.html
@@ -28,8 +28,8 @@ layout: simple_custom
 
 <h2>Previous roles (2010 - 2023)</h2>
 
-<h3>Head of Data @ <a href="https://messagebird.com">MessageBird.com</a></h3>
-<img alt="" src="https://www.messagebird.com/img/logo.svg" style="float:left; height:30px; margin:8px 10px; " />
+<h3>Head of Data @ <a href="https://bird.com">Bird.com</a> (formerly known as MessageBird)</h3>
+<img alt="" src="https://framerusercontent.com/images/BailHvHNfFqDead5fMxCtUiV5wc.png" style="float:left; height:30px; margin:8px 10px; " />
 <p><b>Area</b>: <tt> SaaS | CPaaS | telecommunications | B2B</tt></p>
 <p><b>Company</b>: MessageBird's mission is to create a world where communicating with a business is as easy as talking with a friend. 
 It powers communication between businesses and their customers — across any channel, always with the right context, 
