--- a/content/jobs.html
+++ b/content/jobs.html
@@ -28,8 +28,8 @@ layout: simple_custom
 
 <h2>Previous roles (2010 - 2023)</h2>
 
-<h3>Head of Data @ <a href="https://bird.com">Bird.com</a> (formerly known as MessageBird)</h3>
-<img alt="" src="https://framerusercontent.com/images/BailHvHNfFqDead5fMxCtUiV5wc.png" style="float:left; height:30px; margin:8px 10px; " />
+<h3>Head of Data @ <a href="https://bird.com">Bird.com</a>, formerly known as MessageBird (Jan 2023 - Feb 2024)</h3>
+<img alt="" src="https://cdn.brandfetch.io/idTnNve4SY/theme/light/logo.svg?c=1dxbfHSJFAPEGdCLU4o5B" style="float:left; height:30px; margin:8px 10px; " />
 <p><b>Area</b>: <tt> SaaS | CPaaS | telecommunications | B2B</tt></p>
 <p><b>Company</b>: MessageBird's mission is to create a world where communicating with a business is as easy as talking with a friend. 
 It powers communication between businesses and their customers — across any channel, always with the right context, 
@@ -41,7 +41,7 @@ Data reporting for C-Suite: organized Weekly Business Reviews (WBR) for Product 
 </p>
 
 <h3>Data Analytics Manager (Product) @ <a href="https://bitpanda.com">Bitpanda.com</a> (Jan 2022 - Dec 2022)</h3>
-<img alt="" src="https://cdn.bitpanda.com/media/New%20navigation_Rebrand%203.0/Bitpanda_EN_trimmed.png" style="float:left; height:30px; margin:8px 10px; " />
+<img alt="" src="https://cdn.brandfetch.io/idsltBPwry/theme/light/logo.svg?c=1dxbfHSJFAPEGdCLU4o5B" style="float:left; height:30px; margin:8px 10px; " />
 <p><b>Area</b>: <tt> crypto | fintech | B2C</tt></p>
 <p><b>Company</b>: Bitpanda GmbH is an Austrian company headquartered in Vienna. 
 Bitpanda's mobile app provides access to its trading platform, which provides a 
@@ -54,7 +54,7 @@ cryptocurrency exchange, commodities and securities trading, and ETFs.</p>
 <br />
 
 <h3>Data Science and Analytics Manager @ <a href="https://typeform.com">Typeform.com</a> (Jan 2021 - Dec 2021)</h3>
-<img alt="" src="https://upload.wikimedia.org/wikipedia/commons/0/0a/Typeform_logo-01.svg" style="float:left; height:30px; margin:8px 10px; " />
+<img alt="" src="https://cdn.brandfetch.io/idPkJ70vyb/theme/light/logo.svg?c=1dxbfHSJFAPEGdCLU4o5B" style="float:left; height:30px; margin:8px 10px; " />
 <p><b>Area</b>: <tt> SaaS | marketing | B2B</tt></p>
 <p><b>Company</b>: Typeform is a Spanish online software as a service company that specializes in online form building and online surveys. 
 Its main software creates dynamic forms based on user needs.
