--- a/content/jobs.html
+++ b/content/jobs.html
@@ -101,7 +101,7 @@ Business Intelligence, Big Data Platforms, Data Quality Assessment, data consult
 
 <h3>R&D Engineer (Data Mining) @ <a href="https://ftw.at">Telecommunications Research Center of Vienna</a> (Mar 2010 - Dec 2015)</h3>
 <img alt="" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEiUFDas0IuUPlRyXnhSXzKF3609lwkeAT6Q&s" style="float:left; height:30px; margin:8px 10px; " />
-<p><&nbsp;b>Area</b>: <tt> research | r&d | telecommunications</tt></p>
+<p><&nbsp;<b>Area</b>: <tt> research | r&d | telecommunications</tt></p>
 <p><b>Company</b>: The Telecommunications Research Center Vienna (FTW) is the joint research centre of leading players in telecom business and science in Austria, 
 including major telecom equipment manufacturers, network operators, and the Universities of Technology in Vienna and Graz.</p>
 <p><b>My role</b>:
